fix sked spacing. closes #212

--- a/less/app-chat.less
+++ b/less/app-chat.less
@@ -21,6 +21,11 @@
 	.author { font-weight: bold; }
 }
 
+.chat-schedule-wrap,
+.chat-body-wrap {
+	margin-top: 22px;
+}
+
 .chat-body {
     .chat-post {
         padding: 15px 0;
@@ -74,7 +79,6 @@
 .chat-user-entry {
 	background-color: #ebebeb;
 	border-bottom: 1px solid #ddd;
-	margin-bottom: 22px;
 	position: relative;
 	
 	.chat-login,
