--- a/less/app.less
+++ b/less/app.less
@@ -101,22 +101,6 @@ a:hover, a:active { color: #bccae5; text-decoration: none; }
 	}
 	.live { color: #d54721; }
 }
-.hdr {
-	background-color: #ebebeb;
-	padding: 33px 22px 22px 22px;
-	margin: 0 0 11px 0;
-	
-	h2 {
-		font: normal 36px Arial, Helvetica, sans-serif;
-		color: #555;
-		margin: 0 0 10px 0;
-	}
-	h4 {
-		font: normal 15px/1.5 Arial, Helvetica, sans-serif;
-		color: #787878;
-		margin: 0;
-	}
-}
 .btn, a.btn {
 	background: none;
 	background-color: #7598c9;
